<resources>
    <string name="app_name">&appname;</string>
    <string name="city_hint">Enter City, e.g. Brooklyn</string>
    <string name="livepics_gallery">Live Feed</string>
    <string name="report_photo">Report Photo</string>
    <string name="report_image_success">Image has been reported</string>
    <string name="upload_image_success">Image uploaded successfully</string>
    <string name="upload_image_fail">Image failed to upload. Try again later.</string>
    <string name="report_image_not_available">Cannot report this image</string>
    <string name="generic_error">An error occurred. Please try again later.</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="uber_client_id">3YHteScZ7o9lznBKuSWBYa9KLyiCiMRr</string>
    <string name="lyft_client_id">bI8k8ztNo3Dg</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome_message">Welcome to Crowdwyse.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Create Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="location_permission_rationale">"Location permissions are needed to proceed."</string>
    <string name="regis_progress_message">Churning the server gears&#8230;</string>
    <string name="error_unavaiable_username">This username is already taken</string>
    <string name="error_registered_email">This email is already registered</string>
    <string name="error_account_exists">Account already exists</string>
    <string name="successful_regis">Registration successful</string>
    <string name="error_regis">Something went wrong</string>
    <string name="error_offline">No internet connection</string>
    <string name="error_camera_permission">Camera access denied</string>
    <string name="user_name_signup">Pick your username</string>
    <string name="promp_email_signup">Enter an email</string>
    <string name="promp_password_signup">Choose a password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="error_passwords_match">Passwords don\u2019t match</string>
    <string name="about_title">About Crowdwyse </string>
    <string name="about_us_content_html">
        &lt;p>This app will serve as a gateway connecting you to all of your local hangouts, essentially giving you a panoramic perspective of the ambiance or \'crowd\' currently posted at that particular location. An image is worth a thousand words. No longer will any special, fun plans be made based on subjective reviews, outdated recollections, or vague descriptions. You will now be able to see for yourself a quick glance of the current ambiance or environment of your potential destination, without having to cross your fingers in hopes that the atmosphere will be worth your invested time, money and drive. Crowdwyse will facilitate planning and save users time that would otherwise be wasted driving around looking for their ideal hangout spot, while at the same time helping people find new friends with similar interests or taste. Let us worry about the hassle, just sit back, browse, and find your crowds.&lt;/p>
        &lt;br/>
        &lt;br/>
        &author; (Developer)
        &lt;br/>
        Contact: &contactemail;
    </string>
    <string name="pp_title">PRIVACY POLICY</string>
    <string name="pp_content_html">
        &lt;p>&companyname; (\"Crowdwyse\") is committed to protecting the privacy of our customers\' personal information. This statement applies with respect to the information that we collect from our website located at <i>&companysite;</i> (\"Site\") and through our Mobile Application (\"Mobile App\"). The Site and Mobile App are collectively referred to as the \"Site\". Amendments to this statement will be posted on the Site and be effective when posted. Your continued use of the Site following the posting of any amendment, modification or change shall constitue your acceptance thereof.&lt;/p>
        &lt;p>&lt;u>Information Collected&lt;/u>&lt;/p>
        &lt;p>We collect non-personally identifiable information about you in a number of ways, including tracking your activities through IP address, computer settings or most recently visited URL. We do not collect any personally identifiable information about you unless you voluntarily submit such information to us, by, for example, filling out a survey or registration form. The types of information that may be requested include your name, address, e-mail address, and telephone number.&lt;/p>
        &lt;p>&lt;u>Use of Information&lt;/u>&lt;/p>
        &lt;p>In general, we will only use the information you provide to us for the purpose for which such information was provided. We may also use this information to deliver to you information about &appname; and promotional material from some of your partners, or to conduct trend analysis, pattern detection, and Site administration. Your information may also be used to contact you when necessary and may be shared with other companies that may want to contact you with offers consistent with your stated preferences. Users may opt-out of receiving future mailings from &appname; and other entities by following the instructions set forth in the opt-out section below.&lt;/p>
        &lt;p>Non-personal demographic and profile data is used to tailor your experience at our Site, showing you content we think you might be interested in. This information may also be shared with advertisers on an aggreate non-personal basis.&lt;/p>
        &lt;p>We may investigate and disclose information from or about you if we have a good faith belief that such investigation or disclosure is (a) reasonably necessary to comply with legal process and law enforcement instructions and orders, such as a search warrant, subpoena, statue, judicial processing, or other legal process served on us; (b) helpful to prevent, investigate, or identify possible wrongdoing in connection with the Site; (c) in connection with our Terms of Service and other agreements; (d) in connection with a corporate transaction, such a divestiture, merger, consolidation, or asset sale or (e) protect our rights, reputation, property, or that of our users affiliates, or the public.&lt;/p>
        &lt;p>&lt;u>Use of IP Address&lt;/u>&lt;/p>
        &lt;p>We use your IP Address to help diagnose problems with our server, and to administer our Site.&lt;/p>
        &lt;p>&lt;u>Use of Cookies&lt;/u>&lt;/p>
        &lt;p>When you view our Site, we might store some information on your computer. This information will be in the form of a \"cookie\" or similar files, such as web beacons, flash cookies, or the like (collectively hereinafter \"Cookies\"). Cookies are small pieces of information stored on your hard drive, not on our Site. Cookies do not spy on you or otherwise invade your privacy, and they cannot invade your hard drive and steal information. Rather, they help you navigate a Site as easily as possible. We use cookies to deliver content specific to your interests and to prevent you from reentering all your registration data at each connection.&lt;/p>
        &lt;p>It may be possible to disable some (but not all) Cookies through your device or browser settings, but doing so may affect your ability to use the Site. The method for disabling cookies may vary by device and browser, but can usually be found in the preferences or security settings.&lt;/p>
        &lt;p>&lt;u>Security&lt;/u>&lt;/p>
        &lt;p>Our Site has industry standard security measures in place to protect the loss, misuse and alteration of the information under our control. While there is no such thing as \"perfect security\" on the Internet, we will take all reasonable steps to insure the safety of your personal information.&lt;/p>
        &lt;p>&lt;u>Other Sites; Links&lt;/u>&lt;/p>
        &lt;p>Our Site may contain links to other websites. We are not responsible for the privacy practices or the contenct of such websites.&lt;/p>
        &lt;p>&lt;u>Opt Out&lt;/u>&lt;/p>
        &lt;p>With the exception of administrative and legal notices, you may opt-out of receiving communications from our partners, and from us, by sending an e-mail to &optoutemail;.&lt;/p>
        &lt;p>&lt;u>Children Under the Age of 13&lt;/u>&lt;/p>
        &lt;p>Our Site is not intended for children under 13 years or age. No one under age 13 may provide any personal information to or on the Site. We do not knowingly collect personal information from children under 13. If you are under 13, do not user or provide any information on this Site or on or through any of its features/register on the Site, use any of the interactive or public comment features of this Site or provide any information about yourself to us, including your name, address, telephone number, e-mail address or any screen name or user name you may use. If we learn we have collected or received personal information from a child under 13 without verification of parental consent, we will delete that information. If you believe we might have any information from or about a child under 13, please contact us at &optoutemail;.&lt;/p>
        &lt;p>&lt;u>California Privacy Rights&lt;/u>&lt;/p>
        &lt;p>Pursuant to California Civil Code sections &calcivilcode;, California residents are entitled to ask us for a notice describing what categories of personal customer information we share with third parties or corporate affiliates for those third parties\' or corporate affiliates\' direct marketing purposes. That notice will identify the categories of information shared and will include a list of the third parties and affiliates with which it was shared, along with their names and addresses. If you are a California resident and would like a copy of this notice, pelase submit a written request to the following address:&lt;/p>
        &lt;p>California Privacy Rights Notice&lt;/p>
        Admin&lt;br>
        &companyname;&lt;br>
        &companyaddress;
    </string>
    <string name="terms_and_conditions_title">TERMS AND CONDITIONS</string>
</resources>