<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/PrimaryColor"
    tools:context="com.timemachine.toci.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:paddingTop="18dp"
        android:paddingLeft="10dp"
        android:textColor="@color/PrimaryAccentColor"
        android:textSize="30dip"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome_message"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_marginTop="88dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginBottom="35dp"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="250dip"
                android:layout_height="50dip"
                android:padding="10dp"
                android:text="@string/action_sign_in"
                android:layout_margin="4dp"
                android:layout_marginBottom="24dp"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_selector" />

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="No account yet? Create one"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16dip"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
