<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.timemachine.toci.LoginFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/PrimaryColor">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="88dp"
            android:id="@+id/linearLayout2">

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="Login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginBottom="35dp"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:text="@string/action_sign_in"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_selector" />

            <!--<TextView-->
                <!--android:id="@+id/signUpTextView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:text="Sign Up"-->
                <!--style="?android:textAppearanceMedium"-->
                <!--android:textColor="@color/white"-->
                <!--android:layout_marginTop="65dp" />-->


        </LinearLayout>

        <Button
            android:id="@+id/register_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="Register"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</FrameLayout>
